[project]
name = "llm-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "langchain>=1.2.17",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "uvicorn>=0.38.0",
]
